flycheck-stan/examples/example_error_and_info_composite.stanc3out.txt

Warning: deprecated language construct used in 'examples/example_error_and_info_composite.stan', line 1, column 0:
   -------------------------------------------------
     1:  # The Eight Schools example with non-centered parametrization.
         ^
     2:  # https://mc-stan.org/bayesplot/articles/visual-mcmc-diagnostics.html
     3:  data {
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Warning: deprecated language construct used in 'examples/example_error_and_info_composite.stan', line 2, column 0:
   -------------------------------------------------
     1:  # The Eight Schools example with non-centered parametrization.
     2:  # https://mc-stan.org/bayesplot/articles/visual-mcmc-diagnostics.html
         ^
     3:  data {
     4:    int<lower=0> J;
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Syntax error in 'examples/example_error_and_info_composite.stan', line 8, column 11 to column 12, parsing error:
   -------------------------------------------------
     6:    vector<lower=0>[J] sigma;
     7:  }
     8:  parameters {
                     ^
     9:    rear mu;
    10:    // The parser stops at the above line.
   -------------------------------------------------

Expected top-level variable declaration or "}".


